[gd_scene load_steps=3 format=3 uid="uid://cxxx"]

[ext_resource type="Script" path="res://Scenes/Scene Container/campaigncreation/scripts/CharacterBox.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://d1you1rrwuu48" path="res://Scenes/sci_fi_theme.tres" id="2_theme"]

[node name="CharacterBox" type="PanelContainer"]
custom_minimum_size = Vector2(200, 250)
offset_right = 200.0
offset_bottom = 250.0
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Character Name"
horizontal_alignment = 1

[node name="SpeciesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Species"
horizontal_alignment = 1

[node name="BackgroundLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Background"
horizontal_alignment = 1

[node name="ClassLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Class"
horizontal_alignment = 1

[node name="MotivationLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Motivation"
horizontal_alignment = 1

[node name="HealthStatus" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Health: Healthy"
horizontal_alignment = 1

[node name="EquipmentList" type="ItemList" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="SelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Character"

[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectButton" to="." method="_on_select_button_pressed"]
